# spectral_graph_convolutions

./: .gitignore  README.md  pyproject.toml  requirements.txt
ABIDE_dataset/: ABIDE_graph.py  README.md  config.py  download_preprocess.py  visualize_data.ipynb
notes/: papers_analyzis.md
notes-on-graph-spectral-theory/: .gitignore  config.py  graph_convolution_example.py  notes-on-GSP.bbl  notes-on-GSP.blg  notes-on-GSP.tex  references.bib
related-work-notes/: .gitignore  literature_review_table.tex  references.bib  related_work_notes.tex
report/: references.bib  report.bib  report.fdb_latexmk  report.fls  report.synctex(busy)  report.tex  shortcuts.sty
report/content/: 1intro.tex  2related_work.tex  3proposed_method.tex  4experiments.tex  5discussion.tex  discussion.tex  proposed_method.tex  related_work.tex
scripts/: comparison_notebook.ipynb  train.py  train_script.py
slides/: main.tex
slides/preambule/: autres_packages.tex  macros.tex
slides/slides/: 00_titre_et_tdm.tex  01_premiere_partie.tex  02_deuxieme_partie.tex  04_conclusion.tex
src/medigraph/: __init__.py  train.py  train_multiple_models.py  utils.py
src/medigraph/data/: abide.py  autoencoders.py  experiences_data.py  io.py  preprocess.py  properties.py
src/medigraph/model/: baseline.py  gcn.py  metrics.py
studies/: abide_dataset_exploration.ipynb  graph_convolution_intuition.ipynb  helper.py  normalized_adjacency.py
